ajustes do controller de filial e criação do caminho

--- a/web/layouts/sistema/cabecalho.phtml
+++ b/web/layouts/sistema/cabecalho.phtml
@@ -47,13 +47,10 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <li>
-                            <a class="dropdown-item" href="/usuario/editar?id=<?= $_SESSION['usuario']->getId() ?>">Cadastrar</a>
+                            <a class="dropdown-item" href="/filial/cadastrar?id=<?= $_SESSION['usuario']->getId() ?>">Cadastrar</a>
                         </li>
                         <li>
-                            <a class="dropdown-item" href="/usuario/trocarSenha">Listar</a>
-                        </li>
-                        <li>
-                            <a class="dropdown-item" href="/autenticacao/processaLogout">Sair</a>
+                            <a class="dropdown-item" href="/filial/listar">Listar</a>
                         </li> 
                     </ul>  
                 <li class="nav-item dropdown">
