--- a/web/views/filial/cadastrar.phtml
+++ b/web/views/filial/cadastrar.phtml
@@ -1,7 +1,7 @@
 <div class="container container-sm w-50">
     <form method="post" action="/filial/processacadastrar">
     <?php FlashMessage::getMessage() ?>
-        <input type="hidden" name="empresaId" value="<?= isset($empresaId) ? $empresaId->getEmpresa()->getId() : '' ?>"/>
+        <input type="hidden" name="empresaId"/>
         <div class="row g-3 align-items-center mb-2">
             <label for="nome" class="col-form-label text-end align-content-end col-md-2">Nome</label>
             <div class="col-md-10">
