--- a/web/layouts/sistema/cabecalho.phtml
+++ b/web/layouts/sistema/cabecalho.phtml
@@ -7,6 +7,14 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/ce211dcce0.js" crossorigin="anonymous"></script>
     <link href="/assets/css/sistema.css" rel="stylesheet" />
+    <style>
+        .notification {
+            margin-top: 10px;
+            padding: 10px;
+            color: red; /* Cor do texto vermelha */
+            font-size: 12px; /* Tamanho da fonte menor */
+        }
+    </style>
 </head>
 
 <body  class="d-flex flex-column min-vh-100">
@@ -47,7 +55,7 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <li>
-                            <a class="dropdown-item" href="/filial/cadastrar?id=<?= $_SESSION['usuario']->getEmpresa()->getId() ?>">Cadastrar</a>
+                            <a class="dropdown-item" href="/filial/cadastrar?id=<?= $_SESSION['usuario']->getId() ?>">Cadastrar</a>
                         </li>
                         <li>
                             <a class="dropdown-item" href="/filial/listar">Listar</a>
