--- a/web/views/filial/cadastrar.phtml
+++ b/web/views/filial/cadastrar.phtml
@@ -1,24 +1,26 @@
 <div class="container container-sm w-50">
     <form method="post" action="/filial/processacadastrar">
     <?php FlashMessage::getMessage() ?>
-        <input type="hidden" name="empresaId"/>
+    <input type="hidden" name="filialId" value="<?= isset($filalId) ? $filialId->getId() : '' ?>"/>
+    <input type="hidden" name="empresaId" value="<?= isset($empresaId) ? $empresaId->getEmpresa()->getId() : '' ?>"/>
+    <div class="container container-sm w-75">
+    <form method="post" action="/vaga/salvar">
+        <input type="hidden" name="vagaId" value="<?= isset($vaga) ? $vaga->getId() : '' ?>"/>
         <div class="row g-3 align-items-center mb-2">
-            <label for="nome" class="col-form-label text-end align-content-end col-md-2">Nome</label>
-            <div class="col-md-10">
-                <input type="text" class="form-control" name="nome" id="nome" placeholder="Nome do usuário">
+            <div class="col-md-12 form-floating">
+                <input type="text" class="form-control" name="titulo" id="titulo" value="<?= isset($vaga) ? $vaga->getTitulo() : '' ?>">
+                <label for="titulo" class="col-form-label">Título</label>
             </div>
         </div>
         <div class="row g-3 align-items-center mb-2">
-            <label for="cpf" class="col-form-label text-end align-content-end col-md-2">CPF <span class="text-danger">*</span></label></label>
-            <div class="col-md-3">
-                <input type="text" class="form-control" name="cpf" id="cpf" placeholder="CPF">
+            <div class="col-md-4 form-floating">
+                <input type="text" class="form-control" name="email" id="email" value="<?= isset($vaga) ? $vaga->getEmail() : '' ?>">
+                <label for="email" class="col-form-label">Email</label>
             </div>
-            <label for="email" class="col-form-label text-end align-content-end col-md-2">E-mail</label>
-            <div class="col-md-5">
-                <input type="text" class="form-control" name="email" id="email" placeholder="E-mail do usuário">
+                </div>
             </div>
         </div>
-
+    </div>            
         <div class="row gy-3 gy-md-4 overflow-hidden mt-4 mb-2">
             <div class="col-12">
                 <div class="d-grid">
