ajustes para CR

--- a/web/views/empresa/cadastrar.phtml
+++ b/web/views/empresa/cadastrar.phtml
@@ -74,19 +74,19 @@
                     </div>
                     <div class="col-12">
                         <label for="filialLogradouro" class="form-label">Logradouro *</label>
-                        <input type="text" class="form-control" name="filialLogradouro" id="filialLogradouro" required>
+                        <input type="text" class="form-control" name="filialLogradouro" id="filialLogradouro">
                     </div>
                     <div class="col-12">
                         <label for="filialNumero" class="form-label">Numero *</label>
-                        <input type="text" class="form-control" name="filialNumero" id="filialNumero" required oninput="this.value = this.value.replace(/[^0-9]/g, '');">
+                        <input type="text" class="form-control" name="filialNumero" id="filialNumero">
                     </div>
                     <div class="col-12">
                         <label for="filialComplemento" class="form-label">Complemento *</label>
-                        <input type="text" class="form-control" name="filialComplemento" id="filialComplemento" required>
+                        <input type="text" class="form-control" name="filialComplemento" id="filialComplemento">
                     </div>
                     <div class="col-12">
                         <label for="filialBairro" class="form-label">Bairro *</label>
-                        <input type="text" class="form-control" name="filialBairro" id="filialBairro" required>
+                        <input type="text" class="form-control" name="filialBairro" id="filialBairro">
                     </div>
                     <div class="col-12">
                         <label for="filialCidade" class="form-label">Cidade *</label>
@@ -94,7 +94,7 @@
                     </div>
                     <div class="col-12">
                         <label for="filialEstado" class="form-label">Estado *</label>
-                        <input type="text" class="form-control" name="filialEstado" id="filialEstado" required>
+                        <input type="text" class="form-control" name="filialEstado" id="filialEstado" required maxlength="2">
                         <div class="notification" id="notification">
                     Somente 2 digitos
                         </div>
