--- a/web/layouts/sistema/cabecalho.phtml
+++ b/web/layouts/sistema/cabecalho.phtml
@@ -55,6 +55,9 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <li>
+                            <a class="dropdown-item" href="/filial/cadastrar">Cadastrar</a>
+                        </li> 
+                        <li>
                             <a class="dropdown-item" href="/filial/listar">Listar</a>
                         </li> 
                     </ul>  
