--- a/web/layouts/sistema/cabecalho.phtml
+++ b/web/layouts/sistema/cabecalho.phtml
@@ -69,6 +69,19 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link mx-2 dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <i class="fas "></i> Habilidades
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <li>
+                            <a class="dropdown-item" href="/habilidade/cadastrar">Cadastrar</a>
+                        </li>
+                        <li>
+                            <a class="dropdown-item" href="/habilidade/listar">Listar</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link mx-2 dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         <i class="fas fa-user-circle"></i> Minha conta
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
