--- a/web/views/filial/listar.phtml
+++ b/web/views/filial/listar.phtml
@@ -7,7 +7,7 @@
         </tr>
     </thead>
     <tbody>
-    <?php foreach ($filial as $filial) : ?>
+    <?php foreach ($filiais as $filial) : ?>
         <tr>
             <td><?= $filial->getNome() ?></td>
             <td class="minimal">
