--- a/web/views/filial/formulario.phtml
+++ b/web/views/filial/formulario.phtml
@@ -1,53 +1,53 @@
 <div class="container container-sm w-50">
     <form method="post" action="/filial/processaCadastrar">
     <?php FlashMessage::getMessage() ?>
-        <input type="hidden" name="filialId" value="<?= isset($filalId) ? $filialId->getId() : '' ?>"/>
+        <input type="hidden" name="filialId" value="<?= isset($filial) ? $filial->getId() : '' ?>"/>
         <div class="row g-3 align-items-center mb-2">
             <label for="nome" class="col-form-label text-end align-content-end col-md-2">Nome</label>
             <div class="col-md-10">
-                <input type="text" class="form-control" name="filialNome" id="filialNome" required>
+                <input type="text" class="form-control" name="filialNome" value="<?= isset($filial) ? $filial->getNome() : '' ?>" id="filialNome" required>
             </div>
         </div>   
         <div class="row g-3 align-items-center mb-2">
             <label for="nome" class="col-form-label text-end align-content-end col-md-2">Cep</label>
             <div class="col-md-10">
-                <input type="text" class="form-control" name="filialCep" id="filialCep" minlength="8" maxlength="8" required oninput="this.value = this.value.replace(/[^0-9]/g, '');">
-            </div>
+                <input type="text" class="form-control" name="filialCep" value="<?= isset($filial) ? $filial->getCep() : '' ?>" id="filialCep" minlength="8" maxlength="8" required oninput="this.value = this.value.replace(/[^0-9]/g, '');">
+            </div>  
         </div>   
         <div class="row g-3 align-items-center mb-2">
             <label for="logradouro" class="col-form-label text-end align-content-end col-md-2">Logadrouro</label>
             <div class="col-md-10">
-                <input type="text" class="form-control" name="filialLogradouro" id="logradouro">
+                <input type="text" class="form-control" name="filialLogradouro" value="<?= isset($filial) ? $filial->getLogradouro() : '' ?>" id="logradouro">
             </div>
         </div>   
         <div class="row g-3 align-items-center mb-2">
             <label for="filialnumero" class="col-form-label text-end align-content-end col-md-2">Numero</label>
             <div class="col-md-10">
-                <input type="text" class="form-control" name="filialNumero" id="filialNumero">
+                <input type="text" class="form-control" name="filialNumero" value="<?= isset($filial) ? $filial->getNumero() : '' ?>" id="filialNumero">
             </div>
         </div>   
         <div class="row g-3 align-items-center mb-2">
             <label for="complemento" class="col-form-label text-end align-content-end col-md-2">Complemento</label>
             <div class="col-md-10">
-                <input type="complemento" class="form-control" name="filialComplemento" id="complemento">
+                <input type="complemento" class="form-control" name="filialComplemento" value="<?= isset($filial) ? $filial->getComplemento() : '' ?>" id="complemento">
             </div>
         </div>   
         <div class="row g-3 align-items-center mb-2">
             <label for="bairro" class="col-form-label text-end align-content-end col-md-2">Bairro</label>
             <div class="col-md-10">
-                <input type="text" class="form-control" name="filialBairro" id="bairro">
+                <input type="text" class="form-control" name="filialBairro" value="<?= isset($filial) ? $filial->getBairro() : '' ?>" id="bairro">
             </div>
         </div>   
         <div class="row g-3 align-items-center mb-2">
             <label for="cidade" class="col-form-label text-end align-content-end col-md-2">Cidade</label>
             <div class="col-md-10">
-                <input type="text" class="form-control" name="filialCidade" id="cidade" required>
+                <input type="text" class="form-control" name="filialCidade" value="<?= isset($filial) ? $filial->getCidade() : '' ?>" id="cidade" required>
             </div>
         </div>   
         <div class="row g-3 align-items-center mb-2">
             <label for="estado" class="col-form-label text-end align-content-end col-md-2">Estado</label>
             <div class="col-md-10">
-                <input type="text" class="form-control" name="filialEstado" id="estado" required maxlength="2">
+                <input type="text" class="form-control" name="filialEstado" value="<?= isset($filial) ? $filial->getEstado() : '' ?>" id="estado" required maxlength="2">
             </div>
         </div>   
         <div class="row gy-3 gy-md-4 overflow-hidden mt-4 mb-2">
