--- a/web/views/habilidade/listar.phtml
+++ b/web/views/habilidade/listar.phtml
@@ -1,27 +1,22 @@
 <table class="table table-bordered table-striped table-hover caption-top">
-    <caption>Usuários da minha empresa</caption>
+    <caption>Habilidades da minha empresa</caption>
     <thead>
     <tr>
         <th class="minimal">#</th>
-        <th>Habilidades</th>
-
-        <th class="minimal">
-            <i class="fas fa-cog"></i>
+        <th>Habilidades
         </th>
     </tr>
     </thead>
     <tbody>
-
+            <?php foreach ($habilidade as $valorHabilidade) :?>
         <tr>
-            <td class="minimal"></td>
-            <td></td>
-            <td></td>
-
+            <td class="minimal"><?= $valorHabilidade->getId()?></td>
+            <td><?=$valorHabilidade->getHabilidade()?></td>
             <td class="minimal">
-                <a class="btn btn-primary btn-sm" href="/usuario/editar?id=" title="Editar"><i class="fas fa-edit"></i></a>
-                    <a class="btn btn-danger btn-sm" href="/usuario/excluir?id=" title="Excluir"><i class="fas fa-trash"></i></a>
+                <a class="btn btn-primary btn-sm" href="/habilidade/editar?id=<?= $valorHabilidade->getId()?>" title="Editar"><i class="fas fa-edit"></i></a>
+                <a class="btn btn-danger btn-sm" href="/habilidade/excluir?id=<?= $valorHabilidade->getId()?>" title="Excluir"><i class="fas fa-trash"></i></a>
             </td>
         </tr>
-
+        <?php endforeach; ?>
     </tbody>
 </table>
