ajustes em habilidadeDTO

--- a/web/views/habilidade/formulario.phtml
+++ b/web/views/habilidade/formulario.phtml
@@ -1,5 +1,5 @@
 <div class="container container-sm w-50">
-    <form method="post" action="/habilidade/processaCadastrar">
+    <form method="post" action="/habilidade/salvar">
         <input type="hidden" name="id" value="<?=isset($habilidade) ? $habilidade->getId() : ''?>"/>
         <div class="row g-3 align-items-center mb-2">
             <div class="col-md-10">
