--- a/web/views/vaga/detalhes.phtml
+++ b/web/views/vaga/detalhes.phtml
@@ -12,6 +12,8 @@
     <p>Regime de Trabalho: <?= RegimeTrabalhoEnum::from($vaga->getRegimeTrabalho())->label() ?></p>
     <p>Senioridade: <?= NivelSenioridadeEnum::from($vaga->getNivelSenioridade())->label() ?></p>
     <p>Hierarquia: <?= NivelHierarquicoEnum::from($vaga->getNivelHierarquico())->label() ?></p>
+    <p>Habilidades: <?= $habilidadesDescrita ?> </p>
+
     <p>Localização: <?= "{$vaga->getFilial()->getBairro()} - {$vaga->getFilial()->getCidade()}, {$vaga->getFilial()->getEstado()}"?></p>
     <br>
     <div>
